<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayInfor"
    android:orientation="vertical"


    >


    <include layout="@layout/toolbar_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x70"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x30"
            android:layout_weight="1"
            android:text="@string/infor_oldpassword"
            android:textColor="@color/white"

            />

        <EditText
            android:id="@+id/infor_oldpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x52"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/infor_oldpassword_edit"
            android:paddingBottom="1dip"
            android:inputType="textPassword"
            android:textColorHint="#66696D"

            android:textSize="@dimen/x16"
            />
    </LinearLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/image_informa"
        android:background="@color/grayLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x70"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x30"
            android:layout_weight="1"
            android:text="@string/infor_newpassword"
            android:textColor="@color/white"

            />

        <EditText
            android:id="@+id/infor_newpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x52"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/infor_newpassword_edit"
            android:textSize="@dimen/x16"
            android:inputType="textPassword"
            android:textColorHint="#66696D"
            />
    </LinearLayout>

    <View
        android:id="@+id/viewline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/image_informa"
        android:background="@color/grayLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x70"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x30"
            android:layout_weight="1"
            android:text="@string/infor_confirm"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/infor_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x50"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/infor_confirm_edit"
            android:textSize="@dimen/x16"
            android:textColorHint="#66696D"
            android:inputType="textPassword"


            />
    </LinearLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_below="@+id/image_informa"
        android:background="@color/grayLine" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="bottom"
       >

        <Button
            android:id="@+id/infor_savepassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x47"
            android:background="@color/bookBlue"
            android:text="@string/infor_save"
            android:textColor="@color/black"

            />

    </LinearLayout>
</LinearLayout>
