<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bookGrayground"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title"></include>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x35"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/btnPreMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="33dip"
            android:background="@drawable/ic_before" />

        <ImageButton
            android:id="@+id/btnNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dip"
            android:background="@drawable/ic_next" />

        <TextView
            android:id="@+id/tvCurrentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="11月"
            android:textColor="#323232"
            android:textSize="20sp" />

        <!--<TextView-->
            <!--android:id="@+id/tvCurrentYear"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_toRightOf="@id/tvCurrentMonth"-->
            <!--android:text="99"-->
            <!--android:textColor="#323232"-->
            <!--android:textSize="22sp" />-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x5"
        android:layout_marginBottom="@dimen/x5"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:layout_marginBottom="2dip"
            android:layout_marginTop="2dip">

            <TableRow>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/sunday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/monday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thesday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/wednesday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thursday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/friday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/saturday"
                    android:textColor="@color/canlendar_text_color" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<com.fesco.bookpay.view.calendar.WrapContentHeightViewPager-->
            <!--android:id="@+id/vp_calendar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/white"></com.fesco.bookpay.view.calendar.WrapContentHeightViewPager>-->
        <android.support.v4.view.ViewPager
            android:id="@+id/vp_calendar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x265"
          />
    <include layout="@layout/include_tab_statistic"

        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
