<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bookGrayground"
    android:orientation="vertical">

    <include
        android:id="@+id/rb_toolbar"
        layout="@layout/toolbar_title" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/rb_toolbar"
    android:layout_above="@+id/rbm_approve_btn"
    android:fillViewport="true"

    >
    <LinearLayout
        android:id="@+id/rbm_approve_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x112"
            android:layout_gravity="center_vertical"
            android:background="@color/bookBlue"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbm_approval_title"
                android:layout_marginLeft="@dimen/x23"
                android:layout_marginTop="@dimen/x13"
                android:text="Name"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x23"
                android:layout_marginTop="@dimen/x13"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rbm_approveing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reimbursement_approve"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x6"
                    android:text="@string/reimbursement_line"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbm_approval_bill"
                    android:layout_marginLeft="@dimen/x6"
                    android:text="@string/not_available"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x23"
                android:layout_marginTop="@dimen/x13"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/x10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reimbursement_money"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbm_approval_money"
                    android:text="0.00"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x13"
            android:layout_marginLeft="@dimen/x23"
            android:layout_marginTop="@dimen/x13"
            android:text="@string/approval_progress"
            android:textColor="@color/gray" />

        <com.fesco.bookpay.view.ScrollListView
            android:id="@+id/rbm_approve_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x13"
            android:layout_marginLeft="@dimen/x23"
            android:layout_marginTop="@dimen/x13"
            android:text="@string/basic_information"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x13"
                android:layout_marginLeft="@dimen/x23"
                android:layout_marginTop="@dimen/x13"
                android:text="@string/reimbursement_department"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbm_approval_department"
                android:layout_marginBottom="@dimen/x13"
                android:layout_marginLeft="@dimen/x23"
                android:layout_marginTop="@dimen/x13"
                android:text="XXX" />

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/white"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="@dimen/x13"-->
                <!--android:layout_marginLeft="@dimen/x23"-->
                <!--android:layout_marginTop="@dimen/x13"-->
                <!--android:text="@string/reimbursement_day"-->
                <!--android:textColor="@color/gray" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/rbm_approval_day"-->
                <!--android:layout_marginBottom="@dimen/x13"-->
                <!--android:layout_marginLeft="@dimen/x23"-->
                <!--android:layout_marginTop="@dimen/x13"-->
                <!--android:text="2014-01-02" />-->

        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x13"
            android:layout_marginTop="@dimen/x13"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x23"
                android:text="@string/reimbursement_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x6"
                android:text="(" />

            <TextView
                android:id="@+id/rbm_approve_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=")" />


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rbm_approve_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
    </LinearLayout>


</ScrollView>
    <Button
        android:id="@+id/rbm_approve_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:background="@color/bookBlue"
        android:text="@string/reedit"
        android:textColor="@color/white" />

</RelativeLayout>